# sparql-profiler

./: .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/sparql_profiler/: __init__.py  __main__.py  create_dataset.py  namespaces.py  profiler.py  questions.py  utils.py
src/sparql_profiler/queries/archived/: 1_1_global_stats_counts.rq  1_8_count_graphs.rq  2_6_count_subject_linked_to_object_by_property.rq  bio2rdf_dataset_links.rq
src/sparql_profiler/queries/bio2rdf/: 1_1_count_namespaces.rq
src/sparql_profiler/queries/hcls/: 1_1_count_triples.rq  1_2_count_entities.rq  1_3_count_distinctSubjects.rq  1_4_count_distinctProperties.rq  1_5_count_distinctObjects.rq  1_6_count_distinctClasses.rq  1_7_count_distinctLiterals.rq  2_2_count_instances_per_classes.rq  2_3_count_instances_linked_to_property.rq  2_4_count_objects_linked_to_property.rq  2_5_count_literal_linked_to_property.rq  2_6_count_subject_object_links.rq
src/sparql_profiler/queries/lslod/: queries.rq
tests/: __init__.py  test_cli.py  test_profiler.py
